--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -52,4 +52,48 @@ set_global_assignment -name VHDL_FILE TOP.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_Y2 -to CLOCK_50
+set_location_assignment PIN_AG14 -to CLOCK2_50
+set_location_assignment PIN_AG15 -to CLOCK3_50
+set_location_assignment PIN_M23 -to "KEY(0)"
+set_location_assignment PIN_M21 -to "KEY(1)"
+set_location_assignment PIN_N21 -to "KEY(2)"
+set_location_assignment PIN_R24 -to "KEY(3)"
+set_location_assignment PIN_AB22 -to "GPIO(0)"
+set_location_assignment PIN_AC15 -to "GPIO(1)"
+set_location_assignment PIN_AB21 -to "GPIO(2)"
+set_location_assignment PIN_Y17 -to "GPIO(3)"
+set_location_assignment PIN_AC21 -to "GPIO(4)"
+set_location_assignment PIN_Y16 -to "GPIO(5)"
+set_location_assignment PIN_AD21 -to "GPIO(6)"
+set_location_assignment PIN_AE16 -to "GPIO(7)"
+set_location_assignment PIN_AD15 -to "GPIO(8)"
+set_location_assignment PIN_AE15 -to "GPIO(9)"
+set_location_assignment PIN_AC19 -to "GPIO(10)"
+set_location_assignment PIN_AF16 -to "GPIO(11)"
+set_location_assignment PIN_AD19 -to "GPIO(12)"
+set_location_assignment PIN_AF15 -to "GPIO(13)"
+set_location_assignment PIN_AF24 -to "GPIO(14)"
+set_location_assignment PIN_AE21 -to "GPIO(15)"
+set_location_assignment PIN_AF25 -to "GPIO(16)"
+set_location_assignment PIN_AC22 -to "GPIO(17)"
+set_location_assignment PIN_AE22 -to "GPIO(18)"
+set_location_assignment PIN_AF21 -to "GPIO(19)"
+set_location_assignment PIN_AF22 -to "GPIO(20)"
+set_location_assignment PIN_AD22 -to "GPIO(21)"
+set_location_assignment PIN_AG25 -to "GPIO(22)"
+set_location_assignment PIN_AD25 -to "GPIO(23)"
+set_location_assignment PIN_AH25 -to "GPIO(24)"
+set_location_assignment PIN_AE25 -to "GPIO(25)"
+set_location_assignment PIN_AG22 -to "GPIO(26)"
+set_location_assignment PIN_AE24 -to "GPIO(27)"
+set_location_assignment PIN_AH22 -to "GPIO(28)"
+set_location_assignment PIN_AF26 -to "GPIO(29)"
+set_location_assignment PIN_AE20 -to "GPIO(30)"
+set_location_assignment PIN_AG23 -to "GPIO(31)"
+set_location_assignment PIN_AF20 -to "GPIO(32)"
+set_location_assignment PIN_AH26 -to "GPIO(33)"
+set_location_assignment PIN_AH23 -to "GPIO(34)"
+set_location_assignment PIN_AG26 -to "GPIO(35)"
+set_location_assignment PIN_M23 -to reset_pin
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
