--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -96,4 +96,5 @@ set_location_assignment PIN_AH26 -to "GPIO(33)"
 set_location_assignment PIN_AH23 -to "GPIO(34)"
 set_location_assignment PIN_AG26 -to "GPIO(35)"
 set_location_assignment PIN_M23 -to reset_pin
+set_global_assignment -name VHDL_FILE Signalgenerator_2.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
