--- a/modelsim/.gitignore
+++ b/modelsim/.gitignore
@@ -11,6 +11,7 @@
 *.jpg
 *.html
 *.bsf
+*.mpf
 
 # ignore simulation output of ModelSim
 wlf*
@@ -21,3 +22,7 @@ cov*/
 transcript*
 sc_dpiheader.h
 vsim.dbg
+
+
+# other files
+.gitignore~
