Signalgenerator works correctly, but only with one iteration

--- a/modelsim/.gitignore
+++ b/modelsim/.gitignore
@@ -1,5 +1,6 @@
 # ignore ModelSim generated files and directories (temp files and so on)
 [_@]*
+/work/
 
 # ignore compilation output of ModelSim
 *.mti
