--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -239,4 +239,6 @@ set_global_assignment -name SDC_FILE InvariantObserver.sdc
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name VHDL_FILE Observer.vhd
+set_global_assignment -name VHDL_FILE Observer_behave.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
