--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -232,13 +232,13 @@ set_instance_assignment -name TSU_REQUIREMENT "10 ns" -from * -to *
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
-set_global_assignment -name VHDL_FILE TOP.vhd
-set_global_assignment -name VHDL_FILE Signalgenerator_behave.vhd
-set_global_assignment -name VHDL_FILE Signalgenerator.vhd
-set_global_assignment -name SDC_FILE InvariantObserver.sdc
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name VHDL_FILE Observer.vhd
-set_global_assignment -name VHDL_FILE Observer_behave.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/TOP.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator_behave.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/Observer_behave.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/Observer.vhd
+set_global_assignment -name SDC_FILE InvariantObserver.sdc
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
