--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -230,15 +230,6 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name FAST_INPUT_REGISTER ON -to *
 set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to *
 set_instance_assignment -name TSU_REQUIREMENT "10 ns" -from * -to *
-set_global_assignment -name VHDL_FILE ../modules/AltPLa.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/Observer_behave.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/OneObserver_top.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/TOP.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator_behave.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/Observer.vhd
-set_global_assignment -name SDC_FILE InvariantObserver.sdc
-set_global_assignment -name QIP_FILE ../modules/AltPLa.qip
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
@@ -246,5 +237,14 @@ set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/Debug_1.stp
+set_global_assignment -name SDC_FILE InvariantObserver.out.sdc
+set_global_assignment -name VHDL_FILE ../modules/AltPLa.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/Observer_behave.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/OneObserver_top.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/TOP.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator_behave.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/Observer.vhd
+set_global_assignment -name QIP_FILE ../modules/AltPLa.qip
 set_global_assignment -name SIGNALTAP_FILE output_files/Debug_1.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
