--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -247,4 +247,7 @@ set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Observer.vhd
 set_global_assignment -name QIP_FILE ../modules/AltPLa.qip
 set_global_assignment -name SIGNALTAP_FILE output_files/Debug_1.stp
+set_global_assignment -name SDC_FILE inout_delay.sdc
+set_global_assignment -name SMART_RECOMPILE OFF
+set_global_assignment -name ENABLE_DRC_SETTINGS ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
