--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -238,16 +238,15 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/Debug_1.stp
 set_global_assignment -name SDC_FILE InvariantObserver.out.sdc
-set_global_assignment -name VHDL_FILE ../modules/AltPLa.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Observer_behave.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/OneObserver_top.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/TOP.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator_behave.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Observer.vhd
-set_global_assignment -name QIP_FILE ../modules/AltPLa.qip
 set_global_assignment -name SIGNALTAP_FILE output_files/Debug_1.stp
 set_global_assignment -name SDC_FILE inout_delay.sdc
 set_global_assignment -name SMART_RECOMPILE OFF
 set_global_assignment -name ENABLE_DRC_SETTINGS ON
+set_global_assignment -name QIP_FILE ../modules/Altpla.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
