--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -249,4 +249,5 @@ set_global_assignment -name SDC_FILE inout_delay.sdc
 set_global_assignment -name SMART_RECOMPILE OFF
 set_global_assignment -name ENABLE_DRC_SETTINGS ON
 set_global_assignment -name QIP_FILE ../modules/Altpla.qip
+set_global_assignment -name OPTIMIZE_TIMING OFF
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
