This Branch contains experiment with only a ordinary Signalgenerator, all frequencies attempted and measured fmax for oBserver
-) measurement data in documentation/measurement/Onlyobserver.txt
-) View of created RTL Architecture in documentation/pictures/20.02.2014_3

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 **/*.pin
 **/*.sof
 **/*.qws
+**/*.txt~
+
+documentation/measurement/*.txt~
 quartus/db/
 quartus/output_files/
 quartus/qsys_control_system/
