--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP4CE115F29C7
 set_global_assignment -name USE_GENERATED_PHYSICAL_CONSTRAINTS OFF -section_id eda_blast_fpga
 set_global_assignment -name CYCLONEII_RESERVE_NCEO_AFTER_CONFIGURATION "USE AS REGULAR IO"
 
-set_global_assignment -name TOP_LEVEL_ENTITY TOP
+set_global_assignment -name TOP_LEVEL_ENTITY TOP_onlyObserver
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 12.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:00:05  DECEMBER 20, 2013"
 set_global_assignment -name LAST_QUARTUS_VERSION 12.1
@@ -227,14 +227,6 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_instance_assignment -name FAST_INPUT_REGISTER ON -to *
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to *
-set_instance_assignment -name TSU_REQUIREMENT "10 ns" -from * -to *
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
-set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/Debug_1.stp
 set_global_assignment -name SDC_FILE InvariantObserver.out.sdc
@@ -244,10 +236,18 @@ set_global_assignment -name VHDL_FILE ../vhdl/TOP.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator_behave.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Observer.vhd
-set_global_assignment -name SIGNALTAP_FILE output_files/Debug_1.stp
 set_global_assignment -name SDC_FILE inout_delay.sdc
 set_global_assignment -name SMART_RECOMPILE OFF
 set_global_assignment -name ENABLE_DRC_SETTINGS ON
 set_global_assignment -name QIP_FILE ../modules/Altpla.qip
 set_global_assignment -name QIP_FILE ../modules/Altplb.qip
+set_global_assignment -name VHDL_FILE ../vhdl/TOP_onlyObserver.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
+set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_instance_assignment -name FAST_INPUT_REGISTER ON -to *
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to *
+set_instance_assignment -name TSU_REQUIREMENT "10 ns" -from * -to *
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
