--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -237,6 +237,10 @@ set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/Debug_1.stp
+set_global_assignment -name SMART_RECOMPILE OFF
+set_global_assignment -name ENABLE_DRC_SETTINGS ON
+set_global_assignment -name VHDL_FILE ../modules/Altpla.vhd
+set_global_assignment -name VHDL_FILE ../modules/Altplb.vhd
 set_global_assignment -name SDC_FILE InvariantObserver.out.sdc
 set_global_assignment -name VHDL_FILE ../vhdl/Observer_behave.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/OneObserver_top.vhd
@@ -246,8 +250,4 @@ set_global_assignment -name VHDL_FILE ../vhdl/Signalgenerator.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/Observer.vhd
 set_global_assignment -name SIGNALTAP_FILE output_files/Debug_1.stp
 set_global_assignment -name SDC_FILE inout_delay.sdc
-set_global_assignment -name SMART_RECOMPILE OFF
-set_global_assignment -name ENABLE_DRC_SETTINGS ON
-set_global_assignment -name QIP_FILE ../modules/Altpla.qip
-set_global_assignment -name QIP_FILE ../modules/Altplb.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
