--- a/quartus/InvariantObserver.qsf
+++ b/quartus/InvariantObserver.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP4CE115F29C7
 set_global_assignment -name USE_GENERATED_PHYSICAL_CONSTRAINTS OFF -section_id eda_blast_fpga
 set_global_assignment -name CYCLONEII_RESERVE_NCEO_AFTER_CONFIGURATION "USE AS REGULAR IO"
 
-set_global_assignment -name TOP_LEVEL_ENTITY TOP_onlyObserver
+set_global_assignment -name TOP_LEVEL_ENTITY TOP_10Obs
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 12.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:00:05  DECEMBER 20, 2013"
 set_global_assignment -name LAST_QUARTUS_VERSION 12.1
@@ -231,6 +231,14 @@ set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/Debug_1.stp
 set_global_assignment -name SMART_RECOMPILE OFF
 set_global_assignment -name ENABLE_DRC_SETTINGS ON
+set_instance_assignment -name FAST_INPUT_REGISTER ON -to *
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to *
+set_instance_assignment -name TSU_REQUIREMENT "10 ns" -from * -to *
+set_global_assignment -name VHDL_FILE ../vhdl/TOP_2Obs.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/TOP_5Obs.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/TOP_1Obs.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/TOP_10Obs.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/TOP_4Obs.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/TOP_onlyObserver.vhd
 set_global_assignment -name VHDL_FILE ../modules/Altpla.vhd
 set_global_assignment -name VHDL_FILE ../modules/Altplb.vhd
@@ -248,7 +256,4 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_instance_assignment -name FAST_INPUT_REGISTER ON -to *
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to *
-set_instance_assignment -name TSU_REQUIREMENT "10 ns" -from * -to *
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
